Added About me paragraphs and ul

--- a/about.html
+++ b/about.html
@@ -114,21 +114,48 @@
         </ul>
       </div>
     </nav>
-    <div class="about-section">
+    <div class="about-section shadow-sm">
       <div class="container">
         <div class="row">
           <div class="col-md-8">
             <h1 class="mt-5 mb-2">Hi, I'm Taylor Heaton</h1>
             <h3 class="mb-4">Software Developer in Fort Worth, TX</h3>
-            <p>I graduated from TCU</p>
+            <p>
+              I'm a well-rounded intro developer looking to expand my expertise
+              in Backend Development. I love learning new things and am
+              interested in growing my coding skills in whatever form that
+              takes. My ultimate goal is to use my skills to make healthcare
+              services more accessible to the general public.
+            </p>
+            <p>
+              As you'll see through my Passion Project, I'm autistic and proud
+              of it. I bring many unique strengths to the table, such as:
+            </p>
+            <ul class="list-group list-group-flush mb-4">
+              <li class="list-group-item">
+                Ability to intently focus on the task-at-hand
+              </li>
+              <li class="list-group-item">Desire to learn new concepts</li>
+              <li class="list-group-item">
+                Productive leadership through enhanced awareness of others'
+                unique strengths
+              </li>
+              <li class="list-group-item">Dependability and loyalty</li>
+            </ul>
+            <p class="mb-4">
+              I love advocating for those who are marginalzed or "othered" and
+              pride myself in my ability to unite people from different
+              backgrounds to create meaningful change.
+            </p>
           </div>
+
           <div class="col-lg-4">
             <div class="about-image">
               <img
                 src="images/rainbowprofile.jpg"
                 alt="Profile picture of Taylor Heaton, Software Developer"
                 title="Taylor Heaton Profile Pic"
-                class="img-fluid p-3 m-2"
+                class="img-fluid"
               />
             </div>
           </div>
