Formatted about section photo and paragraph, added MOTS link

--- a/about.html
+++ b/about.html
@@ -115,9 +115,9 @@
       </div>
     </nav>
     <div class="about-section shadow-sm">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-md-8 about-hero">
             <h1 class="mt-5 mb-2">Hi, I'm Taylor Heaton</h1>
             <h3 class="mb-4">Software Developer in Fort Worth, TX</h3>
             <p>
@@ -128,8 +128,14 @@
               services more accessible to the general public.
             </p>
             <p>
-              As you'll see through my Passion Project, I'm autistic and proud
-              of it. I bring many unique strengths to the table, such as:
+              As you'll see through my Passion Project
+              <a
+                href="https://www.youtube.com/momonthespectrum"
+                target="_blank"
+                title="Mom on the Spectrum"
+                >Mom on the Spectrum</a
+              >, I'm autistic and proud of it. I bring many unique strengths to
+              the table, such as:
             </p>
             <ul class="list-group list-group-flush mb-4">
               <li class="list-group-item">
@@ -142,7 +148,7 @@
               </li>
               <li class="list-group-item">Dependability and loyalty</li>
             </ul>
-            <p class="mb-4">
+            <p class="mb-3">
               I love advocating for those who are marginalzed or "othered" and
               pride myself in my ability to unite people from different
               backgrounds to create meaningful change.
