Formatted MOTS link

--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
       </div>
     </nav>
     <div class="about-section shadow-sm">
-      <div class="container-fluid">
+      <div class="container-fluid mb-4">
         <div class="row">
           <div class="col-md-8 about-hero">
             <h1 class="mt-5 mb-2">Hi, I'm Taylor Heaton</h1>
@@ -133,6 +133,7 @@
                 href="https://www.youtube.com/momonthespectrum"
                 target="_blank"
                 title="Mom on the Spectrum"
+                class="mots-link"
                 >Mom on the Spectrum</a
               >, I'm autistic and proud of it. I bring many unique strengths to
               the table, such as:
@@ -149,9 +150,10 @@
               <li class="list-group-item">Dependability and loyalty</li>
             </ul>
             <p class="mb-3">
-              I love advocating for those who are marginalzed or "othered" and
-              pride myself in my ability to unite people from different
-              backgrounds to create meaningful change.
+              I love advocating for those who are "othered" and pride myself in
+              my ability to unite people from different backgrounds to create
+              meaningful change. To view more qualifications please see my
+              resume.
             </p>
           </div>
 
@@ -169,7 +171,7 @@
       </div>
     </div>
     <div class="certifications m-4">
-      <h2 class="text-center mb-3">My Certifications</h2>
+      <h2 class="text-center mb-4">My Certifications</h2>
       <div class="container"></div>
       <div class="row">
         <div class="col-md-3">
