--- a/about.html
+++ b/about.html
@@ -118,16 +118,16 @@
       <div class="container-fluid mb-4">
         <div class="row">
           <div class="col-md-8 about-hero">
-            <h1 class="mt-5 mb-2">Hi, I'm Taylor Heaton</h1>
-            <h3 class="mb-4">Software Developer in Fort Worth, TX</h3>
-            <p>
+            <h1 class="mt-5 mb-2 about-h1">Hi, I'm Taylor Heaton</h1>
+            <h3 class="mb-4 about-h3">Software Developer in Fort Worth, TX</h3>
+            <p class="about-p">
               I'm a well-rounded intro developer looking to expand my expertise
               in Backend Development. I love learning new things and am
               interested in growing my coding skills in whatever form that
               takes. My ultimate goal is to use my skills to make healthcare
               services more accessible to the general public.
             </p>
-            <p>
+            <p class="about-p2">
               As you'll see through my Passion Project
               <a
                 href="https://www.youtube.com/momonthespectrum"
@@ -138,7 +138,7 @@
               >, I'm autistic and proud of it. I bring many unique strengths to
               the table, such as:
             </p>
-            <ul class="list-group list-group-flush mb-4">
+            <ul class="list-group list-group-flush mb-4 about-list">
               <li class="list-group-item">
                 Ability to intently focus on the task-at-hand
               </li>
@@ -149,7 +149,7 @@
               </li>
               <li class="list-group-item">Dependability and loyalty</li>
             </ul>
-            <p class="mb-3">
+            <p class="mb-3 about-p3">
               I love advocating for those who are "othered" and pride myself in
               my ability to unite people from different backgrounds to create
               meaningful change. To view more qualifications please see my
@@ -174,7 +174,7 @@
       <h2 class="text-center mb-4">My Certifications</h2>
       <div class="container"></div>
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-3 mb-3">
           <div class="cert-img">
             <a
               href="https://www.shecodes.io/certificates/a27e88259d6a7097ae7c724cb9b00ea2"
@@ -190,7 +190,7 @@
             </a>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 mb-3">
           <div class="cert-img">
             <a
               href="#"
@@ -206,7 +206,7 @@
             </a>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 mb-3">
           <div class="cert-img">
             <a
               href="https://www.shecodes.io/certificates/e014f0c0932cbbe4f4bf380193625a74"
@@ -222,7 +222,7 @@
             </a>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 mb-3">
           <div class="cert-img">
             <a
               href="https://www.shecodes.io/certificates/793c6994532fd0a82109bb2f61e07685"
