Rounded icon showcase borders

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 >Launch Project</a
               >
             </div>
-            <div class="icons border p-1 mb-5">
+            <div class="icons border p-1 mb-5 rounded">
               <div class="row text-center p-2">
                 <div class="col-md-3">
                   <i class="fab fa-html5 html"></i>
@@ -236,7 +236,7 @@
                 >Launch Project</a
               >
             </div>
-            <div class="icons border p-1 mb-5">
+            <div class="icons border p-1 mb-5 rounded">
               <div class="row text-center mb-2 p-2">
                 <div class="col-3">
                   <i class="fab fa-html5 html"></i>
@@ -302,7 +302,7 @@
                 >Launch Project</a
               >
             </div>
-            <div class="icons border p-1 mb-5">
+            <div class="icons border p-1 mb-5 rounded">
               <div class="row text-center mb-2 p-2">
                 <div class="col-3">
                   <i class="fab fa-html5 html"></i>
