Added link to email address

--- a/about.html
+++ b/about.html
@@ -240,5 +240,46 @@
         </div>
       </div>
     </div>
+    <div class="container contact-section text-center shadow-sm">
+      <h3 class="contact-header mb-3" id="contact">Contact Me</h3>
+      <div class="container">
+        <a
+          href="mailto:taylornheaton@gmail.com"
+          title="Email Taylor"
+          class="contact-icons"
+          ><i class="far fa-envelope"></i
+        ></a>
+        <a
+          href="https://www.linkedin.com/in/taylor-heaton-14070969/"
+          title="Taylor's Linked-In Profile"
+          target="_blank"
+          class="contact-icons"
+        >
+          <i class="fab fa-linkedin"></i
+        ></a>
+        <a
+          href="https://github.com/theaton89"
+          title="Taylor's Github Profile"
+          target="_blank"
+          class="contact-icons"
+          ><i class="fab fa-github"></i
+        ></a>
+      </div>
+      <a
+        href="mailto:taylornheaton@gmail.com"
+        title="Email Taylor Heaton"
+        class="email-taylor"
+        ><p class="taylors-email mt-4">taylornheaton@gmail.com</p></a
+      >
+    </div>
+
+    <footer class="text-center mb-1 mt-4">
+      <a href="#top" title="Back to top" class="arrow-link"
+        ><i
+          class="fas fa-arrow-circle-up mb-4 footer-arrow"
+          title="Back to Top"
+        ></i
+      ></a>
+    </footer>
   </body>
 </html>
