--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
         </ul>
       </div>
     </nav>
-    <div class="about-section shadow-sm">
+    <div class="about-section shadow-sm mb-5">
       <div class="container-fluid mb-4">
         <div class="row">
           <div class="col-md-8 about-hero">
@@ -171,7 +171,7 @@
       </div>
     </div>
     <div class="certifications m-4">
-      <h2 class="text-center mb-4">My Certifications</h2>
+      <h2 class="text-center mb-5">My Certifications</h2>
       <div class="container"></div>
       <div class="row">
         <div class="col-md-3 mb-3">
