--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </ul>
       </div>
     </nav>
-    <div class="hero shadow-sm">
+    <div class="hero shadow">
       <div class="row header-main">
         <div class="col-md-5 text-center header-intro">
           <p class="header-paragraph">Hi, I'm</p>
@@ -141,7 +141,7 @@
         </div>
       </div>
     </div>
-    <div class="container my-projects">
+    <div class="container my-projects shadow">
       <h1 class="text-center showcase-title" id="portfolio">My Projects</h1>
       <div class="container">
         <div class="row mt-5 mb-1">
@@ -198,7 +198,7 @@
               <a
                 href="https://naughty-perlman-1cb4e0.netlify.app/"
                 target="_blank"
-                class="btn btn-project"
+                class="btn btn-project mb-4"
                 title="Open Autism Website by Taylor Heaton"
                 >Launch Project</a
               >
@@ -231,7 +231,7 @@
               <a
                 href="https://jovial-bose-b591a2.netlify.app/"
                 target="_blank"
-                class="btn btn-project"
+                class="btn btn-project mb-4"
                 title="Open Weather app by Taylor Heaton"
                 >Launch Project</a
               >
@@ -297,7 +297,7 @@
               <a
                 href="https://hardcore-newton-2875a1.netlify.app/"
                 target="_blank"
-                class="btn btn-project"
+                class="btn btn-project mb-4"
                 title="Open Dictionary App by Taylor Heaton"
                 >Launch Project</a
               >
