--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@
             >
           </li>
 
-          
           <li class="nav-item">
             <a
               class="nav-link"
@@ -102,14 +101,15 @@
               title="Mom on the Spectrum, Taylor Heaton's Passion Project"
               >Passion Project</a
             >
-            <li class="nav-item">
+          </li>
+
+          <li class="nav-item">
             <a
               class="nav-link"
               href="#contact"
               title="Contact Taylor Heaton, Software Developer"
               >Contact</a
             >
-          </li>
           </li>
         </ul>
       </div>
@@ -153,7 +153,7 @@
               >
                 <img
                   src="images/autism-website.jpg"
-                  class="img-fluid p-2 border rounded img-display"
+                  class="img-fluid rounded img-display"
                   alt="Autism in Females, Website by Taylor Heaton"
                   title="Autism Website by Taylor Heaton"
                 />
@@ -165,7 +165,7 @@
               <a href="https://jovial-bose-b591a2.netlify.app/" target="_blank">
                 <img
                   src="images/weather-app.jpg"
-                  class="img-fluid p-2 border rounded img-display"
+                  class="img-fluid rounded img-display"
                   alt="Weather application with forecast"
                   title="Weather app by Taylor Heaton"
                 />
@@ -180,7 +180,7 @@
               >
                 <img
                   src="images/dictionary-app.jpg"
-                  class="img-fluid p-2 border rounded img-display"
+                  class="img-fluid rounded img-display"
                   alt="Mental Health Dictionary application"
                   title="Mental Health Dictionary app by Taylor Heaton"
                 />
@@ -192,18 +192,12 @@
       <div class="container icon-showcase">
         <div class="row mb-5">
           <div class="col-md-4">
-            <h3 class="project-showcase text-center mb-4">Autism Website</h3>
-            <p class="text-center project-description">This is what it's about blah blah blah</p>
-            <div>
-              <a
-                href="https://naughty-perlman-1cb4e0.netlify.app/"
-                target="_blank"
-                class="btn btn-project mb-4"
-                title="Open Autism Website by Taylor Heaton"
-                >Launch Project</a
-              >
-            </div>
-            <div class="icons border p-1 mb-5 rounded">
+            <div class="column-info border rounded mb-5 mt-3">
+              <h3 class="project-showcase text-center mb-4">Autism Website</h3>
+              <p class="text-center project-description">
+                This is what it's about blah blah blah
+              </p>
+
               <div class="row text-center p-2">
                 <div class="col-md-3">
                   <i class="fab fa-html5 html"></i>
@@ -222,22 +216,25 @@
                   <small class="icon-text">VS Code</small>
                 </div>
               </div>
+              <div class="row">
+                <a
+                  href="https://naughty-perlman-1cb4e0.netlify.app/"
+                  target="_blank"
+                  class="btn btn-project mt-3 mb-5"
+                  title="Open Autism Website by Taylor Heaton"
+                  >Launch Project</a
+                >
+              </div>
             </div>
           </div>
           <div class="col-md-4">
-            <h3 class="project-showcase text-center mb-4">Weather App</h3>
-            <p class="text-center project-description">This is what it's about</p>
-            <div>
-              <a
-                href="https://jovial-bose-b591a2.netlify.app/"
-                target="_blank"
-                class="btn btn-project mb-4"
-                title="Open Weather app by Taylor Heaton"
-                >Launch Project</a
-              >
-            </div>
-            <div class="icons border p-1 mb-5 rounded">
-              <div class="row text-center mb-2 p-2">
+            <div class="column-info border rounded mb-5 mt-3">
+              <h3 class="project-showcase text-center mb-4">Weather App</h3>
+              <p class="text-center project-description">
+                This is what it's about
+              </p>
+
+              <div class="row text-center p-2">
                 <div class="col-3">
                   <i class="fab fa-html5 html"></i>
                   <small class="icon-text">HTML</small>
@@ -286,24 +283,28 @@
                   <i class="fas fa-search seo"></i>
                   <small class="icon-text">SEO</small>
                 </div>
+              </div>
+
+              <div class="row">
+                <a
+                  href="https://jovial-bose-b591a2.netlify.app/"
+                  target="_blank"
+                  class="btn btn-project mt-3 mb-5"
+                  title="Open Weather app by Taylor Heaton"
+                  >Launch Project</a
+                >
               </div>
             </div>
           </div>
 
           <div class="col-md-4">
-            <h3 class="project-showcase text-center mb-4">Dictionary App</h3>
-            <p class="text-center project-description">This is what it's about</p>
-            <div>
-              <a
-                href="https://hardcore-newton-2875a1.netlify.app/"
-                target="_blank"
-                class="btn btn-project mb-4"
-                title="Open Dictionary App by Taylor Heaton"
-                >Launch Project</a
-              >
-            </div>
-            <div class="icons border p-1 mb-5 rounded">
-              <div class="row text-center mb-2 p-2">
+            <div class="column-info border rounded mb-5 mt-3">
+              <h3 class="project-showcase text-center mb-4">Dictionary App</h3>
+              <p class="text-center project-description">
+                This is what it's about
+              </p>
+
+              <div class="row text-center p-2">
                 <div class="col-3">
                   <i class="fab fa-html5 html"></i>
                   <small class="icon-text">HTML</small>
@@ -352,6 +353,15 @@
                   <i class="fas fa-search seo"></i>
                   <small class="icon-text">SEO</small>
                 </div>
+              </div>
+              <div class="row">
+                <a
+                  href="https://hardcore-newton-2875a1.netlify.app/"
+                  target="_blank"
+                  class="btn btn-project mt-3 mb-5"
+                  title="Open Dictionary App by Taylor Heaton"
+                  >Launch Project</a
+                >
               </div>
             </div>
           </div>
@@ -383,7 +393,12 @@
           ><i class="fab fa-github"></i
         ></a>
       </div>
-      <a href="mailto:taylornheaton@gmail.com" title="Email Taylor Heaton" class="email-taylor"><p class="taylors-email mt-3">taylornheaton@gmail.com</p></a>
+      <a
+        href="mailto:taylornheaton@gmail.com"
+        title="Email Taylor Heaton"
+        class="email-taylor"
+        ><p class="taylors-email mt-3">taylornheaton@gmail.com</p></a
+      >
     </div>
 
     <footer class="text-center mb-3 mt-4">
