--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               >
                 <img
                   src="images/autism-website.jpg"
-                  class="img-fluid rounded img-display"
+                  class="img-fluid border rounded img-display"
                   alt="Autism in Females, Website by Taylor Heaton"
                   title="Autism Website by Taylor Heaton"
                 />
@@ -165,7 +165,7 @@
               <a href="https://jovial-bose-b591a2.netlify.app/" target="_blank">
                 <img
                   src="images/weather-app.jpg"
-                  class="img-fluid rounded img-display"
+                  class="img-fluid border rounded img-display"
                   alt="Weather application with forecast"
                   title="Weather app by Taylor Heaton"
                 />
@@ -180,7 +180,7 @@
               >
                 <img
                   src="images/dictionary-app.jpg"
-                  class="img-fluid rounded img-display"
+                  class="img-fluid border rounded img-display"
                   alt="Mental Health Dictionary application"
                   title="Mental Health Dictionary app by Taylor Heaton"
                 />
