Formatted Launch Project button

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 <a
                   href="https://naughty-perlman-1cb4e0.netlify.app/"
                   target="_blank"
-                  class="btn btn-project mt-3 mb-5"
+                  class="btn btn-project shadow-sm mt-3 mb-4"
                   title="Open Autism Website by Taylor Heaton"
                   >Launch Project</a
                 >
@@ -289,7 +289,7 @@
                 <a
                   href="https://jovial-bose-b591a2.netlify.app/"
                   target="_blank"
-                  class="btn btn-project mt-3 mb-5"
+                  class="btn btn-project shadow-sm mt-3 mb-4"
                   title="Open Weather app by Taylor Heaton"
                   >Launch Project</a
                 >
@@ -358,7 +358,7 @@
                 <a
                   href="https://hardcore-newton-2875a1.netlify.app/"
                   target="_blank"
-                  class="btn btn-project mt-3 mb-5"
+                  class="btn btn-project shadow-sm mt-3 mb-4"
                   title="Open Dictionary App by Taylor Heaton"
                   >Launch Project</a
                 >
