Updated About info

--- a/about.html
+++ b/about.html
@@ -121,11 +121,11 @@
             <h1 class="mt-5 mb-2 about-h1">Hi, I'm Taylor Heaton</h1>
             <h3 class="mb-4 about-h3">Software Developer in Fort Worth, TX</h3>
             <p class="about-p">
-              I'm a well-rounded intro developer looking to expand my expertise
-              in Backend Development. I love learning new things and am
-              interested in growing my coding skills in whatever form that
-              takes. My ultimate goal is to use my skills to make healthcare
-              services more accessible to the general public.
+              I'm a Junior Developer looking to expand my expertise in Backend
+              Development. I love learning new things and am interested in
+              growing my coding skills in whatever form that takes. My ultimate
+              goal is to use my skills to make healthcare services more
+              accessible to the general public.
             </p>
             <p class="about-p2">
               As you'll see through my Passion Project
