--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
           <li class="nav-item">
             <a
               class="nav-link"
-              href="#"
+              href="files/taylor-heaton-resume.pdf"
               target="_blank"
               title="Resume for Taylor Heaton"
               >Resume</a
@@ -106,7 +106,7 @@
           <li class="nav-item">
             <a
               class="nav-link"
-              href="index.html#contact"
+              href="#contact"
               title="Contact Taylor Heaton, Software Developer"
               >Contact</a
             >
