--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <li class="nav-item">
             <a
               class="nav-link"
-              href="#"
+              href="files/taylor-heaton-resume.pdf"
               target="_blank"
               title="Resume for Taylor Heaton"
               >Resume</a
