Tried new layout for about page

--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
     <div class="about-section shadow-sm mb-5">
       <div class="container-fluid mb-4">
         <div class="row">
-          <div class="col-md-8 about-hero">
+          <div class="col-md-7 about-hero">
             <h1 class="mt-5 mb-2 about-h1">Hi, I'm Taylor Heaton</h1>
             <h3 class="mb-4 about-h3">Software Developer in Fort Worth, TX</h3>
             <p class="about-p">
@@ -136,28 +136,18 @@
                 class="mots-link"
                 >Mom on the Spectrum</a
               >, I'm autistic and proud of it. I bring many unique strengths to
-              the table, such as:
-            </p>
-            <ul class="list-group list-group-flush mb-4 about-list">
-              <li class="list-group-item">
-                Ability to intently focus on the task-at-hand
-              </li>
-              <li class="list-group-item">Desire to learn new concepts</li>
-              <li class="list-group-item">
-                Productive leadership through enhanced awareness of others'
-                unique strengths
-              </li>
-              <li class="list-group-item">Dependability and loyalty</li>
-            </ul>
-            <p class="mb-3 about-p3">
-              I love advocating for those who are "othered" and pride myself in
-              my ability to unite people from different backgrounds to create
-              meaningful change. To view more qualifications please see my
-              resume.
+              the table and excel in uniting teams from all different
+              backgrounds. For more qualifications, please see
+              <a
+                href="files/taylor-heaton-resume.pdf"
+                target="_blank"
+                title="Taylor Heaton's Resume"
+                >my resume</a
+              >.
             </p>
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-5">
             <div class="about-image">
               <img
                 src="images/rainbowprofile.jpg"
