Updated color scheme

--- a/about.html
+++ b/about.html
@@ -117,9 +117,12 @@
     <div class="about-section shadow-sm mb-5">
       <div class="container-fluid mb-4">
         <div class="row">
-          <div class="col-md-7 about-hero">
-            <h1 class="mt-5 mb-2 about-h1">Hi, I'm Taylor Heaton</h1>
-            <h3 class="mb-4 about-h3">Software Developer in Fort Worth, TX</h3>
+          <div class="col-md-6 about-hero">
+            <h1 class="mt-5 mb-2 about-h1">
+              Hi, I'm<br />
+              Taylor Heaton
+            </h1>
+            <h3 class="mb-5 about-h3">Software Developer in Fort Worth, TX</h3>
             <p class="about-p">
               I'm a Junior Developer looking to expand my expertise in Backend
               Development. I love learning new things and am interested in
@@ -147,10 +150,10 @@
             </p>
           </div>
 
-          <div class="col-lg-5">
+          <div class="col-lg-6">
             <div class="about-image">
               <img
-                src="images/rainbowprofile.jpg"
+                src="/images/edited-profile-pic.jpg"
                 alt="Profile picture of Taylor Heaton, Software Developer"
                 title="Taylor Heaton Profile Pic"
                 class="img-fluid"
