--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <script
       src="https://kit.fontawesome.com/31ffceef22.js"
       crossorigin="anonymous"
@@ -43,8 +46,8 @@
     <title>Taylor Heaton - Software Developer</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-custom navbar-light" id="top">
-      <a class="navbar-brand" href="#">TH</a>
+    <nav class="navbar navbar-expand-lg" id="top">
+      <a class="navbar-brand logo" href="#">TH</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -61,8 +64,8 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a
-              class="nav-link"
-              href="#"
+              class="nav-link active"
+              href="/"
               title="Homepage for Taylor Heaton's Portfolio"
               >Home <span class="sr-only">(current)</span></a
             >
@@ -114,9 +117,9 @@
         </ul>
       </div>
     </nav>
-    <div class="hero shadow">
+    <div class="hero shadow-sm">
       <div class="row header-main">
-        <div class="col-md-5 text-center header-intro">
+        <div class="col-md-7 text-center header-intro">
           <p class="header-paragraph">Hi, I'm</p>
           <h1 class="header-h1">Taylor Heaton</h1>
           <h3 class="mb-5 header-h3">Software Developer in Fort Worth, TX</h3>
@@ -131,9 +134,9 @@
           </div>
         </div>
 
-        <div class="col-lg-7 profile-pic">
+        <div class="col-lg-5 profile-pic">
           <img
-            src="images/edited-profile-pic.jpg"
+            src="images/rainbowprofile.jpg"
             class="img-fluid header-image d-block"
             alt="Taylor Heaton profile picture"
             title="Taylor Heaton's Profile Picture"
