Changed link hover colors and removed hero shadow

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </ul>
       </div>
     </nav>
-    <div class="hero shadow-sm">
+    <div class="hero">
       <div class="row header-main">
         <div class="col-md-7 text-center header-intro">
           <p class="header-paragraph">Hi, I'm</p>
@@ -144,7 +144,7 @@
         </div>
       </div>
     </div>
-    <div class="container my-projects shadow">
+    <div class="container my-projects">
       <h1 class="text-center showcase-title" id="portfolio">My Projects</h1>
       <div class="container">
         <div class="row mt-5 mb-1">
