--- a/about.html
+++ b/about.html
@@ -43,8 +43,8 @@
     <title>Taylor Heaton - Software Developer</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-custom navbar-light" id="top">
-      <a class="navbar-brand" href="/">TH</a>
+    <nav class="navbar navbar-expand-lg" id="top">
+      <a class="navbar-brand logo" href="/">TH</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -69,7 +69,7 @@
           </li>
           <li class="nav-item active">
             <a
-              class="nav-link"
+              class="nav-link active"
               href="#"
               title="About Taylor Heaton, Software Developer"
               >About<span class="sr-only">(current)</span></a
