--- a/about.html
+++ b/about.html
@@ -266,13 +266,36 @@
       >
     </div>
 
-    <footer class="text-center mb-1 mt-4">
+    <footer class="text-center mb-3 mt-4">
       <a href="#top" title="Back to top" class="arrow-link"
         ><i
           class="fas fa-arrow-circle-up mb-4 footer-arrow"
           title="Back to Top"
         ></i
       ></a>
+      <br />
+      <small>
+        Responsive website built and designed by
+        <a
+          href="https://www.youtube.com/momonthespectrum"
+          target="_blank"
+          title="Taylor's Youtube Channel"
+          >Taylor Heaton</a
+        >,
+        <a
+          href="https://github.com/theaton89"
+          target="_blank"
+          title="Taylor's Github Profile"
+          >open-sourced on Github</a
+        >
+        and
+        <a
+          href="https://friendly-williams-d95e74.netlify.app/"
+          target="_blank"
+          title="Taylor's Netlify Site"
+          >hosted on Netlify</a
+        >.
+      </small>
     </footer>
   </body>
 </html>
