Added page-down link

--- a/index.html
+++ b/index.html
@@ -144,6 +144,11 @@
         </div>
       </div>
     </div>
+    <div class="section-divider mt-5">
+      <a href="#portfolio" title="Scroll to My Projects" class="page-down"
+        ><i class="fas fa-arrow-circle-down text-center"></i
+      ></a>
+    </div>
     <div class="container my-projects">
       <h1 class="text-center showcase-title" id="portfolio">My Projects</h1>
       <div class="container">
