Formatted page up and page down arrows

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </div>
     <div class="section-divider mt-5">
       <a href="#portfolio" title="Scroll to My Projects" class="page-down"
-        ><i class="fas fa-arrow-circle-down text-center"></i
+        ><i class="fas fa-arrow-circle-down text-center down-icon"></i
       ></a>
     </div>
     <div class="container my-projects">
