--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
         </div>
       </div>
     </div>
-    <div class="section-divider mt-5">
-      <a href="#portfolio" title="Scroll to My Projects" class="page-down"
-        ><i class="fas fa-arrow-circle-down text-center down-icon"></i
+    <div class="section-divider mt-5 text-center">
+      <a href="#portfolio" title="Scroll to My Projects" class="arrow-link"
+        ><i class="fas fa-arrow-circle-down header-arrow"></i
       ></a>
     </div>
     <div class="container my-projects">
@@ -185,6 +185,7 @@
               <a
                 href="https://hardcore-newton-2875a1.netlify.app/"
                 target="_blank"
+"
               >
                 <img
                   src="images/dictionary-app.jpg"
@@ -202,8 +203,8 @@
           <div class="col-md-4">
             <div class="column-info border rounded mb-5 mt-3">
               <h3 class="project-showcase text-center mb-4">Autism Website</h3>
-              <p class="text-center project-description">
-                This is what it's about blah blah blah
+              <p class="project-description">
+                I used my knowledge of the skills below to build a landing page about Autism in Females. This page utilizes JavaScript functions to create user interaction.
               </p>
 
               <div class="row text-center p-2">
