Added project description paragraphs

--- a/index.html
+++ b/index.html
@@ -185,7 +185,6 @@
               <a
                 href="https://hardcore-newton-2875a1.netlify.app/"
                 target="_blank"
-"
               >
                 <img
                   src="images/dictionary-app.jpg"
@@ -198,29 +197,32 @@
           </div>
         </div>
       </div>
-      <div class="container icon-showcase">
+      <div class="container">
         <div class="row mb-5">
           <div class="col-md-4">
-            <div class="column-info border rounded mb-5 mt-3">
+            <div class="column-info border rounded mb-2 mt-3">
               <h3 class="project-showcase text-center mb-4">Autism Website</h3>
               <p class="project-description">
-                I used my knowledge of the skills below to build a landing page about Autism in Females. This page utilizes JavaScript functions to create user interaction.
+                For my first-ever coding project, I used my knowledge of the
+                skills below to build a landing page about Autism in Females.
+                This page utilizes JavaScript functions to create user
+                interaction.
               </p>
 
               <div class="row text-center p-2">
-                <div class="col-md-3">
+                <div class="col-3">
                   <i class="fab fa-html5 html"></i>
                   <small class="icon-text">HTML</small>
                 </div>
-                <div class="col-md-3">
+                <div class="col-3">
                   <i class="fab fa-css3-alt css"></i>
                   <small class="icon-text">CSS</small>
                 </div>
-                <div class="col-md-3">
+                <div class="col-3">
                   <i class="fab fa-js-square js"></i>
                   <small class="icon-text">JS</small>
                 </div>
-                <div class="col-md-3">
+                <div class="col-3">
                   <i class="fas fa-laptop-code code"></i>
                   <small class="icon-text">VS Code</small>
                 </div>
@@ -237,10 +239,12 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="column-info border rounded mb-5 mt-3">
+            <div class="column-info border rounded mb-2 mt-3">
               <h3 class="project-showcase text-center mb-4">Weather App</h3>
-              <p class="text-center project-description">
-                This is what it's about
+              <p class="project-description">
+                This app combines all of the below skills in a fully-functioning
+                React Weather app that displays current conditions plus a
+                six-day forecast for major cities around the world.
               </p>
 
               <div class="row text-center p-2">
@@ -307,10 +311,20 @@
           </div>
 
           <div class="col-md-4">
-            <div class="column-info border rounded mb-5 mt-3">
+            <div class="column-info border rounded mb-2 mt-3">
               <h3 class="project-showcase text-center mb-4">Dictionary App</h3>
-              <p class="text-center project-description">
-                This is what it's about
+              <p class="project-description">
+                For my second React project, I built a functioning dictionary
+                application that provides definitions, synonyms, audio
+                pronunciations and images. I chose to incorporate my
+                <a
+                  href="https://www.youtube.com/momonthespectrum"
+                  target="_blank"
+                  title="Mom on the Spectrum"
+                  class="mots-link"
+                  >Passion Project</a
+                >
+                by centering the theme on mental health education.
               </p>
 
               <div class="row text-center p-2">
