Updated about.html colors

--- a/about.html
+++ b/about.html
@@ -114,15 +114,15 @@
         </ul>
       </div>
     </nav>
-    <div class="about-section shadow-sm mb-5">
+    <div class="about-section mb-5">
       <div class="container-fluid mb-4">
         <div class="row">
-          <div class="col-md-6 about-hero">
+          <div class="col-lg-7 about-hero">
             <h1 class="mt-5 mb-2 about-h1">
               Hi, I'm<br />
               Taylor Heaton
             </h1>
-            <h3 class="mb-5 about-h3">Software Developer in Fort Worth, TX</h3>
+            <h3 class="mb-4 about-h3">Software Developer in Fort Worth, TX</h3>
             <p class="about-p">
               I'm a Junior Developer looking to expand my expertise in Backend
               Development. I love learning new things and am interested in
@@ -136,7 +136,7 @@
                 href="https://www.youtube.com/momonthespectrum"
                 target="_blank"
                 title="Mom on the Spectrum"
-                class="mots-link"
+                class="p-link"
                 >Mom on the Spectrum</a
               >, I'm autistic and proud of it. I bring many unique strengths to
               the table and excel in uniting teams from all different
@@ -145,12 +145,13 @@
                 href="files/taylor-heaton-resume.pdf"
                 target="_blank"
                 title="Taylor Heaton's Resume"
+                class="p-link"
                 >my resume</a
               >.
             </p>
           </div>
 
-          <div class="col-lg-6">
+          <div class="col-lg-5">
             <div class="about-image">
               <img
                 src="/images/edited-profile-pic.jpg"
@@ -163,7 +164,12 @@
         </div>
       </div>
     </div>
-    <div class="certifications m-4">
+    <div class="about-section-divider mt-5 text-center">
+      <a href="#certifications" title="Scroll to My Projects" class="arrow-link"
+        ><i class="fas fa-arrow-circle-down header-arrow"></i
+      ></a>
+    </div>
+    <div class="certifications m-4" id="certifications">
       <h2 class="text-center mb-5">My Certifications</h2>
       <div class="container"></div>
       <div class="row">
