Updated colors and links on about.html

--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
     <div class="about-section mb-5">
       <div class="container-fluid mb-4">
         <div class="row">
-          <div class="col-lg-7 about-hero">
+          <div class="col-lg-6 about-hero">
             <h1 class="mt-5 mb-2 about-h1">
               Hi, I'm<br />
               Taylor Heaton
@@ -125,10 +125,9 @@
             <h3 class="mb-4 about-h3">Software Developer in Fort Worth, TX</h3>
             <p class="about-p">
               I'm a Junior Developer looking to expand my expertise in Backend
-              Development. I love learning new things and am interested in
-              growing my coding skills in whatever form that takes. My ultimate
-              goal is to use my skills to make healthcare services more
-              accessible to the general public.
+              Development, particularly React. My ultimate goal is to use my
+              skills to make healthcare services more accessible to the general
+              public.
             </p>
             <p class="about-p2">
               As you'll see through my Passion Project
@@ -140,18 +139,18 @@
                 >Mom on the Spectrum</a
               >, I'm autistic and proud of it. I bring many unique strengths to
               the table and excel in uniting teams from all different
-              backgrounds. For more qualifications, please see
+              backgrounds. For more qualifications, please
               <a
                 href="files/taylor-heaton-resume.pdf"
                 target="_blank"
                 title="Taylor Heaton's Resume"
                 class="p-link"
-                >my resume</a
+                >see my resume</a
               >.
             </p>
           </div>
 
-          <div class="col-lg-5">
+          <div class="col-lg-6">
             <div class="about-image">
               <img
                 src="/images/edited-profile-pic.jpg"
