Designed responsive layout for about.html

--- a/about.html
+++ b/about.html
@@ -118,10 +118,7 @@
       <div class="container-fluid mb-4">
         <div class="row">
           <div class="col-lg-6 about-hero">
-            <h1 class="mt-5 mb-2 about-h1">
-              Hi, I'm<br />
-              Taylor Heaton
-            </h1>
+            <h1 class="mt-5 mb-2 about-h1">Hi, I'm Taylor Heaton</h1>
             <h3 class="mb-4 about-h3">Software Developer in Fort Worth, TX</h3>
             <p class="about-p">
               I'm a Junior Developer looking to expand my expertise in Backend
@@ -169,7 +166,9 @@
       ></a>
     </div>
     <div class="certifications m-4" id="certifications">
-      <h2 class="text-center mb-5">My Certifications</h2>
+      <div class="cert-header">
+        <h2 class="text-center mb-5">My Certifications</h2>
+      </div>
       <div class="container"></div>
       <div class="row">
         <div class="col-md-3 mb-3">
