Made toggler visible

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <nav class="navbar navbar-expand-lg" id="top">
       <a class="navbar-brand logo" href="#">TH</a>
       <button
-        class="navbar-toggler"
+        class="navbar-toggler navbar-light"
         type="button"
         data-toggle="collapse"
         data-target="#navbarSupportedContent"
