--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
     <nav class="navbar navbar-expand-lg" id="top">
       <a class="navbar-brand logo" href="/">TH</a>
       <button
-        class="navbar-toggler"
+        class="navbar-toggler navbar-light"
         type="button"
         data-toggle="collapse"
         data-target="#navbarSupportedContent"
