Added "/" to internal links

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Portfolio and Resume for Taylor Heaton, Software Developer"
+      content="About Taylor Heaton and her Software Development Certifications"
     />
 
     <link
@@ -40,7 +40,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles/portfolio.css" />
-    <title>Taylor Heaton - Software Developer</title>
+    <title>About Taylor Heaton - Software Developer</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg" id="top">
@@ -70,7 +70,7 @@
           <li class="nav-item active">
             <a
               class="nav-link active"
-              href="#"
+              href="/about.html"
               title="About Taylor Heaton, Software Developer"
               >About<span class="sr-only">(current)</span></a
             >
@@ -78,7 +78,7 @@
           <li class="nav-item">
             <a
               class="nav-link"
-              href="index.html#portfolio"
+              href="/index.html#portfolio"
               title="Project Portfolio for Taylor Heaton"
               >Portfolio</a
             >
@@ -87,7 +87,7 @@
           <li class="nav-item">
             <a
               class="nav-link"
-              href="files/taylor-heaton-resume.pdf"
+              href="/files/taylor-heaton-resume.pdf"
               target="_blank"
               title="Resume for Taylor Heaton"
               >Resume</a
@@ -138,7 +138,7 @@
               the table and excel in uniting teams from all different
               backgrounds. For more qualifications, please
               <a
-                href="files/taylor-heaton-resume.pdf"
+                href="/files/taylor-heaton-resume.pdf"
                 target="_blank"
                 title="Taylor Heaton's Resume"
                 class="p-link"
@@ -179,7 +179,7 @@
               title="Taylor Heaton React Development Certification"
             >
               <img
-                src="images/react-cert.jpg"
+                src="/images/react-cert.jpg"
                 alt="Taylor Heaton React Development Certification"
                 title="Taylor Heaton React Development Certification"
                 class="img-fluid"
@@ -195,7 +195,7 @@
               title="Taylor Heaton Responsive Development Certification"
             >
               <img
-                src="images/responsive-cert.jpg"
+                src="/images/responsive-cert.jpg"
                 alt="Taylor Heaton React Development Certification"
                 title="Taylor Heaton React Development Certification"
                 class="img-fluid"
@@ -211,7 +211,7 @@
               title="Taylor Heaton Front-end Development Certification"
             >
               <img
-                src="images/frontend-cert.jpg"
+                src="/images/frontend-cert.jpg"
                 alt="Taylor Heaton React Development Certification"
                 title="Taylor Heaton React Development Certification"
                 class="img-fluid"
@@ -227,7 +227,7 @@
               title="Taylor Heaton Coding Certification"
             >
               <img
-                src="images/intro-cert.jpg"
+                src="/images/intro-cert.jpg"
                 alt="Taylor Heaton React Development Certification"
                 title="Taylor Heaton React Development Certification"
                 class="img-fluid"
