--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
       src="https://kit.fontawesome.com/31ffceef22.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="styles/portfolio.css" />
+    <link rel="stylesheet" href="/styles/portfolio.css" />
     <title>Taylor Heaton - Software Developer</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg" id="top">
-      <a class="navbar-brand logo" href="#">TH</a>
+      <a class="navbar-brand logo" href="/">TH</a>
       <button
         class="navbar-toggler navbar-light"
         type="button"
@@ -90,7 +90,7 @@
           <li class="nav-item">
             <a
               class="nav-link"
-              href="files/taylor-heaton-resume.pdf"
+              href="/files/taylor-heaton-resume.pdf"
               target="_blank"
               title="Resume for Taylor Heaton"
               >Resume</a
@@ -136,7 +136,7 @@
 
         <div class="col-lg-5 profile-pic">
           <img
-            src="images/rainbowprofile.jpg"
+            src="/images/rainbowprofile.jpg"
             class="img-fluid header-image d-block"
             alt="Taylor Heaton profile picture"
             title="Taylor Heaton's Profile Picture"
@@ -150,9 +150,9 @@
       ></a>
     </div>
     <div class="container my-projects">
-      <h1 class="text-center showcase-title" id="portfolio">My Projects</h1>
+      <h2 class="text-center showcase-title" id="portfolio">My Projects</h2>
       <div class="container">
-        <div class="row mt-5 mb-1">
+        <div class="row mt-5 mb-1 project-row">
           <div class="col-md-4">
             <div class="project-image">
               <a
@@ -160,7 +160,7 @@
                 target="_blank"
               >
                 <img
-                  src="images/autism-website.jpg"
+                  src="/images/autism-website.jpg"
                   class="img-fluid border rounded img-display"
                   alt="Autism in Females, Website by Taylor Heaton"
                   title="Autism Website by Taylor Heaton"
@@ -172,7 +172,7 @@
             <div class="project-image">
               <a href="https://jovial-bose-b591a2.netlify.app/" target="_blank">
                 <img
-                  src="images/weather-app.jpg"
+                  src="/images/weather-app.jpg"
                   class="img-fluid border rounded img-display"
                   alt="Weather application with forecast"
                   title="Weather app by Taylor Heaton"
@@ -187,7 +187,7 @@
                 target="_blank"
               >
                 <img
-                  src="images/dictionary-app.jpg"
+                  src="/images/dictionary-app.jpg"
                   class="img-fluid border rounded img-display"
                   alt="Mental Health Dictionary application"
                   title="Mental Health Dictionary app by Taylor Heaton"
