Added titles and alt to img and a href for SEO

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
               <a
                 href="https://naughty-perlman-1cb4e0.netlify.app/"
                 target="_blank"
+                title="Launch Autism Website"
               >
                 <img
                   src="/images/autism-website.jpg"
@@ -170,7 +171,11 @@
           </div>
           <div class="col-md-4">
             <div class="project-image">
-              <a href="https://jovial-bose-b591a2.netlify.app/" target="_blank">
+              <a
+                href="https://jovial-bose-b591a2.netlify.app/"
+                target="_blank"
+                title="Launch Weather Application"
+              >
                 <img
                   src="/images/weather-app.jpg"
                   class="img-fluid border rounded img-display"
@@ -185,6 +190,7 @@
               <a
                 href="https://hardcore-newton-2875a1.netlify.app/"
                 target="_blank"
+                title="Launch Dictionary Application"
               >
                 <img
                   src="/images/dictionary-app.jpg"
