updated responsive cert url

--- a/about.html
+++ b/about.html
@@ -190,7 +190,7 @@
         <div class="col-md-3 mb-3">
           <div class="cert-img">
             <a
-              href="#"
+              href="https://www.shecodes.io/certificates/7d7a5b5bd3c3a864fa4c576c4790c5d3"
               target="_blank"
               title="Taylor Heaton Responsive Development Certification"
             >
